--- a/style/deedubwhy.css
+++ b/style/deedubwhy.css
@@ -202,11 +202,11 @@ h6 {
 	display: inline-block;
 }
 
-a {
+.banner-link {
 	color: #FFF;
 }
 
-a:hover {
+.banner-link:hover {
 	color: #2ecc71;
 }
 
@@ -237,28 +237,36 @@ a:hover {
 	text-align: right;
 }
 
+.tiny-text {
+	margin-top: 5px;
+	margin-right: 5px;
+	font-size: 0.5em;
+	width: 100%;
+	text-align: center;
+}
+
 ol {
 	list-style-type: none;
 	overflow: hidden;
 	padding: 0;
 }
-	ol li {
-		font-size: 1.1em;
-		font-family: helvetica;
-		text-align: center;
-		width: 16.66666%;
-		float: left;
-		color: #FFF;
-	}
+ol li {
+	font-size: 1.1em;
+	font-family: helvetica;
+	text-align: center;
+	width: 16.66666%;
+	float: left;
+	color: #FFF;
+}
 
 /*forms*/
 input[type=text] {
-	width: 90%;
+	width: 100%;
 	padding: 12px 20px;
-    margin: 8px 0;
-    font-size: 1.3em;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
+	margin: 8px 0;
+	font-size: 1.3em;
+	border: 1px solid #ccc;
+	box-sizing: border-box;
 }
 
 textarea {
@@ -270,29 +278,29 @@ textarea {
 }
 
 input[type=submit] {
-    width: 100%;
-    background-color: rgb(22,188,156);
-    color: white;
-    padding: 14px 20px;
-    font-size: 1.3em;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-bottom: 10px;
-    transition: all 0.2s ease-in-out;
+	width: 100%;
+	background-color: rgb(22,188,156);
+	color: white;
+	padding: 14px 20px;
+	font-size: 1.3em;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	margin-bottom: 10px;
+	transition: all 0.2s ease-in-out;
 }
 
 button {
-    width: 100%;
-    background-color: inherit;
-    color: black;
-    padding: 14px 20px;
-    font-size: 1.3em;
-    border: solid 1px red;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-bottom: 10px;
-    transition: all 0.2s ease-in-out;
+	width: 100%;
+	background-color: inherit;
+	color: black;
+	padding: 14px 20px;
+	font-size: 1.3em;
+	border: solid 1px red;
+	border-radius: 4px;
+	cursor: pointer;
+	margin-bottom: 10px;
+	transition: all 0.2s ease-in-out;
 }
 
 button:hover {
@@ -306,10 +314,42 @@ input[type=submit]:hover {
 
 /*lets shrink once we're small*/
 @media screen and (max-width: 960px) {
-	.grid-container {width: 100%;}
+	.grid-container {
+		width: 95%;
+		margin: auto;
+	}
 }
 /*typical media query for phones*/
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 768px) {
+	h1 {
+		font-size: 2rem;
+		font-weight: 100;
+	}
+
+	h2 {
+		font-size: 1.7rem;
+		font-weight: 100;
+	}
+
+	h3 {
+		font-size: 1.5rem;
+		font-weight: 100;
+	}
+
+	h4 {
+		font-size: 1.3rem;
+		font-weight: 100;
+	}
+
+	h5 {
+		font-size: 1.2rem;
+		font-weight: 100;
+	}
+
+	h6 {
+		font-size: 1rem;
+		font-weight: 100;
+	}
 	.col-1 {width: 100%;}
 	.col-2 {width: 100%;}
 	.col-3 {width: 100%;}
