--- a/style/deedubwhy.css
+++ b/style/deedubwhy.css
@@ -244,8 +244,7 @@ h6 {
 }
 
 .tiny-text {
-	margin-top: 5px;
-	margin-right: 5px;
+	margin: 10px;
 	font-size: 0.5em;
 	width: 100%;
 	text-align: center;
@@ -320,6 +319,7 @@ button:focus {
 
 pre, code {
 	box-sizing: border-box;
+	white-space: pre-wrap;
 }
 
 input[type=submit]:hover {
