--- a/style/deedubwhy.css
+++ b/style/deedubwhy.css
@@ -13,8 +13,9 @@ body {
 
 /*let our images take up their divs*/
 img {
-	width: 100%;
-	float: left;
+	width: 20%;
+	margin-top: 20px;
+	display: inline-block;
 }
 
 /*grid*/
